--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,11 @@
 label.board=게시판
-label.board.id=게시글 아이디
+label.board.id=게시판 id
 label.board.title=제목
 label.board.writer=저자
+label.board.director=감독
 label.board.rate=평점
 label.board.content=내용
+label.board.imageLink=이미지
 
 page.boards=게시판
 page.board=게시글
@@ -13,4 +15,8 @@ page.updateBoard=글 수정
 button.save=저장
 button.edit=수정
 button.cancel=취소
-button.list=목록
+button.list=게시판
+
+board.category=카테고리
+board.category.book=book
+board.category.movie=movie
